--- a/views/career.html
+++ b/views/career.html
@@ -183,9 +183,9 @@ box-shadow: 0px 0px 40px rgba(52, 79, 255, 0.2), 6px 6px 20px rgba(0, 0, 0, 0.2)
     z-index:2;
     
 ">
-  <button class="ui button shadow-lg pBtn Gray_4">
+  <a href = 'https://defiant-sodalite-85a.notion.site/Beta-6dfeaaf6dd024663a7467620ca7dad24' target = '_blank' class="ui button shadow-lg pBtn Gray_4">
     채용공고 보러가기
-  </button>
+  </a>
 </div>
 
 <section id='banner' class='container'>
@@ -448,7 +448,7 @@ background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(248,248,255,1) 7
     <span class="ui huge label bg-white Gray_1">
       채용 문의
     </span>
-    <span class= 'Gray_0'>hr_team@cnai.ai</span>
+    <a href = 'mailto:hr_team@cnai.ai' class= 'Gray_0'>hr_team@cnai.ai</a>
     <span class = 'Gray_2'>문의하기 > </span>
   </div> 
   </div>
